--- a/packs/base/manifest.json
+++ b/packs/base/manifest.json
@@ -1,56 +1,58 @@
 {
   "id": "base",
-  "name": "Base — Fundamentos 1",
-  "version": "1.1.0",
-  "description": "Fundamentos universais para canto popular, erudito e coral. Conteúdo seguro, progressivo e didático.",
-  "author": "IMVpedia Voice",
-  "dependencies": [],
-  "missions": {
-    "file": "./missions.json"
-  },
-  "tracks": [
+  "title": "Base — Fundamentos do Canto",
+  "desc": "Trilha completa e segura: aquecimento, apoio, coordenação ar-voz, ressonância, registros, afinação e aplicação. Inclui biblioteca com saúde vocal, fisiologia e repertório.",
+  "cover": "",
+  "paths": [
     {
-      "id": "fundamentos",
-      "title": "Fundamentos do Canto",
-      "subtitle": "Respiração • SOVT • Apoio • Registros • Afinação",
-      "levelRange": "Iniciante → Intermediário",
-      "units": [
-        {
-          "id": "fund-01",
-          "title": "Comece do jeito certo",
-          "subtitle": "Base, segurança e rotina",
-          "lessons": [
-            { "id": "fundamentos-01-intro", "title": "Como estudar voz com segurança", "minutes": 6, "type": "lesson", "file": "./lessons/fundamentos-01-intro.md" },
-            { "id": "fundamentos-02-respiracao", "title": "Respiração funcional para cantar", "minutes": 10, "type": "lesson", "file": "./lessons/fundamentos-02-respiracao.md" }
-          ]
-        },
-        {
-          "id": "fund-02",
-          "title": "Eficiência e aquecimento",
-          "subtitle": "SOVT e coordenação suave",
-          "lessons": [
-            { "id": "fundamentos-03-sovt", "title": "SOVT (lip trill, humming e canudo)", "minutes": 9, "type": "lesson", "file": "./lessons/fundamentos-03-sovt.md" },
-            { "id": "fundamentos-04-apoio", "title": "Apoio vocal sem mitos", "minutes": 12, "type": "lesson", "file": "./lessons/fundamentos-04-apoio.md" }
-          ]
-        },
-        {
-          "id": "fund-03",
-          "title": "Coordenação e musicalidade",
-          "subtitle": "Registros e afinação aplicada",
-          "lessons": [
-            { "id": "fundamentos-05-registros", "title": "Registros e transições (peito/cabeça/misto)", "minutes": 12, "type": "lesson", "file": "./lessons/fundamentos-05-registros.md" },
-            { "id": "fundamentos-06-afinacao", "title": "Afinação: ouvir, ajustar e estabilizar", "minutes": 14, "type": "lesson", "file": "./lessons/fundamentos-06-afinacao.md" }
-          ]
-        }
+      "id": "fund",
+      "title": "Fundamentos (0→1)",
+      "desc": "Construa base sólida sem mitos: postura, respiração funcional, SOVT e afinação.",
+      "lessons": [
+        { "id": "postura", "title": "Postura e alinhamento", "md": "lessons/postura.md" },
+        { "id": "resp", "title": "Respiração funcional (sem exageros)", "md": "lessons/respiracao.md" },
+        { "id": "apoio", "title": "Apoio vocal (controle do ar)", "md": "lessons/apoio.md" },
+        { "id": "sovt", "title": "SOVT (canudo, lip trill, humming)", "md": "lessons/sovt.md" },
+        { "id": "afinacao", "title": "Afinação prática (ataque e sustento)", "md": "lessons/afinacao.md" }
+      ]
+    },
+    {
+      "id": "registros",
+      "title": "Registros e Ressonância (1→2)",
+      "desc": "Entenda peito/cabeça/misto, transições, ressonância e articulação.",
+      "lessons": [
+        { "id": "reg1", "title": "Registros: peito, cabeça e misto", "md": "lessons/registros.md" },
+        { "id": "passaggio", "title": "Passaggio e transição sem empurrar", "md": "lessons/passaggio.md" },
+        { "id": "ress", "title": "Ressonância (projeção sem gritar)", "md": "lessons/ressonancia.md" },
+        { "id": "artic", "title": "Dicção e articulação", "md": "lessons/articulacao.md" }
+      ]
+    },
+    {
+      "id": "aplicacao",
+      "title": "Aplicação Musical (2→3)",
+      "desc": "Dinâmica, fraseado, estilo (popular/erudito/coral) e rotina semanal.",
+      "lessons": [
+        { "id": "dinamica", "title": "Dinâmica e intensidade", "md": "lessons/dinamica.md" },
+        { "id": "fraseado", "title": "Fraseado e interpretação", "md": "lessons/fraseado.md" },
+        { "id": "coro", "title": "Canto coral: blend e afinação coletiva", "md": "lessons/coral.md" },
+        { "id": "repertorio", "title": "Escolha de repertório (seguro e inteligente)", "md": "lessons/repertorio.md" }
       ]
     }
   ],
-  "library": {
-    "articles": [
-      { "id": "apoio-vocal", "title": "Apoio vocal", "tags": ["fundamentos", "respiração", "apoio"], "file": "./articles/apoio-vocal.md" },
-      { "id": "fisiologia-vocal", "title": "Fisiologia vocal (fonte e filtro)", "tags": ["fisiologia", "ressonância", "anatomia"], "file": "./articles/fisiologia-vocal.md" },
-      { "id": "sovt", "title": "SOVT: por que funciona", "tags": ["SOVT", "aquecimento", "saúde"], "file": "./articles/sovt.md" },
-      { "id": "saude-vocal", "title": "Saúde vocal: sinais e prevenção", "tags": ["saúde", "higiene vocal", "alertas"], "file": "./articles/saude-vocal.md" }
+  "library": [
+    { "id": "fisio", "title": "Fisiologia vocal — visão clara", "tag": "Fisiologia", "md": "library/fisiologia.md" },
+    { "id": "higiene", "title": "Saúde vocal e higiene", "tag": "Saúde", "md": "library/saude.md" },
+    { "id": "aquec", "title": "Aquecimento e desaquecimento", "tag": "Rotina", "md": "library/aquecimento.md" },
+    { "id": "mitos", "title": "Mitos comuns (e o que fazer no lugar)", "tag": "Didática", "md": "library/mitos.md" },
+    { "id": "erudito", "title": "Canto erudito — fundamentos práticos", "tag": "Erudito", "md": "library/erudito.md" },
+    { "id": "popular", "title": "Canto popular — estilo com segurança", "tag": "Popular", "md": "library/popular.md" }
+  ],
+  "missions": {
+    "templates": [
+      { "id": "m_sovt", "title": "SOVT leve", "minutesMin": 6, "minutesMax": 12, "xp": 12, "kind": "técnica", "desc": "Lip trill/humming/canudo na região confortável, sem apertar." },
+      { "id": "m_resp", "title": "Respiração funcional", "minutesMin": 6, "minutesMax": 12, "xp": 10, "kind": "técnica", "desc": "Controle do ar: inspiração silenciosa + frase curta com fluxo." },
+      { "id": "m_pitch", "title": "Afinação aplicada", "minutesMin": 8, "minutesMax": 15, "xp": 14, "kind": "musical", "desc": "Notas longas e ataques suaves em 3 alturas confortáveis." },
+      { "id": "m_phrase", "title": "Fraseado em 3 intensidades", "minutesMin": 8, "minutesMax": 15, "xp": 14, "kind": "aplicação", "desc": "Cante 2 frases: suave → médio → suave, mantendo clareza." }
     ]
   }
 }
